--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loader" id="loader">
+        <div class="spinner"></div>
+    </div>
     <header>
         <nav>
             <h1>[Your Company]</h1>
@@ -35,5 +38,14 @@
         <p>© 2025 [Your Company]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <footer>
+        <p>© 2025 [Your Company]. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+    <script>
+        window.addEventListener('load', () => {
+            document.getElementById('loader').classList.add('hidden');
+        });
+    </script>
 </body>
 </html>
