--- a/services.html
+++ b/services.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - [Your Company]</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
+    <style>
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #f1f1f1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+        .loader.hidden {
+            display: none;
+        }
+        .spinner {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #4caf50;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
     <div class="loader" id="loader">
@@ -41,10 +70,6 @@
     <footer>
         <p>© 2025 [Your Company]. All rights reserved.</p>
     </footer>
-    <footer>
-        <p>© 2025 [Your Company]. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
     <script>
         window.addEventListener('load', () => {
             document.getElementById('loader').classList.add('hidden');
